--- a/src/styles.css
+++ b/src/styles.css
@@ -1,78 +1,32 @@
-.rmp-main-container {
-  position: relative;
-}
-.rmp-main-container .mp-container {
-  background: #fff;
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  color: #333;
-  left: 0;
-  padding: 5px;
-  position: absolute;
+.zero-month-picker input {
+  background-color:#343434;
+  color:#d1d1d1;
+  padding:10px;
+  border-radius: 10px;
+  border: none !important;
   text-align: center;
-  width: 220px;
-  z-index: 10;
 }
-.rmp-main-container .mp-container,
-.rmp-main-container .mp-container * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+
+.zero-month-picker input:hover {
+  background-color:#343434;
+  color:#d1d1d1;
+  outline: none;
 }
-.rmp-main-container .mp-container .mp-header {
-  padding-bottom: 5px;
+
+.zero-month-picker input:focus {
+  outline: none;
 }
-.rmp-main-container .mp-container .mp-header .mp-select-year {
-  border-radius: 2px;
-  font-size: 12px;
-  padding: 3px;
+
+.zero-month-picker {
+  padding:30px;
 }
-.rmp-main-container .mp-container .mp-month-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  table-layout: fixed;
-  width: 100%;
-}
-.rmp-main-container .mp-container .mp-month-table .mp-row {
-  background: #fff;
-}
-.rmp-main-container .mp-container .mp-month-table .mp-row td {
+
+body {
+  margin: 0;
   padding: 0;
 }
-.rmp-main-container .mp-container .mp-month-table .mp-row .mp-btn-month {
-  background: #f5f5f5;
-  border: 1px solid #e8e3e3;
-  cursor: pointer;
-  display: block;
-  font-size: 12px;
-  line-height: 15px;
-  margin: 0;
-  outline: none;
-  padding: 5px;
-  width: 100%;
-}
-.rmp-main-container .mp-container .mp-month-table .mp-row .mp-btn-month:hover {
-  background: #3af;
-  border: 0;
-  color: #fff;
-}
-.rmp-main-container
-  .mp-container
-  .mp-month-table
-  .mp-row
-  .mp-btn-month.mp-disabled {
-  color: #999;
-  cursor: default;
-  opacity: 0.3;
-  pointer-events: none;
-}
-.rmp-main-container
-  .mp-container
-  .mp-month-table
-  .mp-row
-  .mp-btn-month.mp-active {
-  background: #ff8000;
-  border: 0;
-  color: #fff;
-  font-weight: 700;
+
+#root {
+  background-color:black;
+  height:500px;
 }
